<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#666">
	<TextView android:id="@+id/rules_stroop" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/rules_stroop" />
	<TextView android:id="@+id/rules_activity" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/rules_activity" />
	<TextView android:id="@+id/rules_combined" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/rules_combined" />
	<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" android:gravity="bottom" android:layout_marginTop="10dip" android:layout_gravity="bottom" android:id="@+id/relativeLayout1">
		<Button android:layout_height="wrap_content" android:text="@string/ContinueBtn_label" android:id="@+id/btnContinue" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="46dp" android:layout_width="200dip"></Button>
	</RelativeLayout>
</LinearLayout>